polish es query logical
